updating fixtures Signed-off-by: Moath Qasim <moad.qassem@gmail.com>
Signed-off-by: Moath Qasim <moad.qassem@gmail.com>

--- a/pkg/userdata/sles/testdata/multiple-ssh-keys.yaml
+++ b/pkg/userdata/sles/testdata/multiple-ssh-keys.yaml
@@ -87,6 +87,7 @@ write_files:
     fi
 
 
+    sed -i 's/systemd/cgroupfs/g' /etc/docker/daemon.json
     systemctl enable --now docker
     systemctl enable --now kubelet
     systemctl enable --now --no-block kubelet-healthcheck.service
@@ -219,7 +220,7 @@ write_files:
   content: |
     kind: KubeletConfiguration
     apiVersion: kubelet.config.k8s.io/v1beta1
-    cgroupDriver: systemd
+    cgroupDriver: cgroupfs
     clusterDomain: cluster.local
     clusterDNS:
       - "10.10.10.10"
