--- a/pkg/userdata/sles/testdata/vsphere.yaml
+++ b/pkg/userdata/sles/testdata/vsphere.yaml
@@ -86,6 +86,7 @@ write_files:
     fi
 
 
+    sed -i 's/systemd/cgroupfs/g' /etc/docker/daemon.json
     systemctl enable --now docker
     systemctl enable --now kubelet
     systemctl enable --now --no-block kubelet-healthcheck.service
@@ -222,7 +223,7 @@ write_files:
   content: |
     kind: KubeletConfiguration
     apiVersion: kubelet.config.k8s.io/v1beta1
-    cgroupDriver: systemd
+    cgroupDriver: cgroupfs
     clusterDomain: cluster.local
     clusterDNS:
       - "10.10.10.10"
