--- a/pkg/userdata/rhel/testdata/kubelet-v1.12-vsphere.yaml
+++ b/pkg/userdata/rhel/testdata/kubelet-v1.12-vsphere.yaml
@@ -76,6 +76,8 @@ write_files:
     subscription-manager register --username='' --password='' --auto-attach --force
     yum config-manager --add-repo=https://download.docker.com/linux/centos/docker-ce.repo
 
+    mkdir /etc/docker
+
     yum install -y docker-ce-3:18.09.1-3.el7 \
       ebtables \
       ethtool \
@@ -87,6 +89,20 @@ write_files:
       curl \
       ipvsadm \
       open-vm-tools
+
+    cat > /etc/docker/daemon.json <<EOF
+    {
+      "exec-opts": ["native.cgroupdriver=systemd"],
+      "log-driver": "json-file",
+      "log-opts": {
+        "max-size": "100m"
+      },
+      "storage-driver": "overlay2",
+      "storage-opts": [
+        "overlay2.override_kernel_check=true"
+      ]
+    }
+    EOF
 
     mkdir -p /opt/bin/
     mkdir -p /var/lib/calico
@@ -190,7 +206,7 @@ write_files:
   content: |
     kind: KubeletConfiguration
     apiVersion: kubelet.config.k8s.io/v1beta1
-    cgroupDriver: cgroupfs
+    cgroupDriver: systemd
     clusterDomain: cluster.local
     clusterDNS:
     rotateCertificates: true
