--- a/pkg/userdata/ubuntu/testdata/dist-upgrade-on-boot.yaml
+++ b/pkg/userdata/ubuntu/testdata/dist-upgrade-on-boot.yaml
@@ -163,11 +163,8 @@ write_files:
     DEBIAN_FRONTEND=noninteractive apt-get -o Dpkg::Options::="--force-confdef" -o Dpkg::Options::="--force-confold" dist-upgrade -y
 
     # Update grub to include kernel command options to enable swap accounting.
-    if grep -v -q swapaccount=1 /proc/cmdline
-    then
-      update-grub
-      touch /var/run/reboot-required
-    fi
+    # Exclude alibaba cloud until this is fixed https://github.com/kubermatic/machine-controller/issues/682
+
     if [[ -e /var/run/reboot-required ]]; then
       reboot
     fi
