--- a/pkg/userdata/ubuntu/testdata/version-1.9.10.yaml
+++ b/pkg/userdata/ubuntu/testdata/version-1.9.10.yaml
@@ -162,11 +162,8 @@ write_files:
     apt-mark hold docker-ce || true
 
     # Update grub to include kernel command options to enable swap accounting.
-    if grep -v -q swapaccount=1 /proc/cmdline
-    then
-      update-grub
-      touch /var/run/reboot-required
-    fi
+    # Exclude alibaba cloud until this is fixed https://github.com/kubermatic/machine-controller/issues/682
+
     if [[ -e /var/run/reboot-required ]]; then
       reboot
     fi
