--- a/test/e2e/provisioning/testdata/machinedeployment-openstack.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-openstack.yaml
@@ -29,7 +29,7 @@ spec:
             password: "<< PASSWORD >>"
             tenantName: "<< TENANT_NAME >>"
             image: "<< OS_IMAGE >>"
-            flavor: "m1.small"
+            flavor: "m1.tiny"
             floatingIpPool: ""
             domainName: "<< DOMAIN_NAME >>"
             region: "<< REGION >>"
