enabling rhel preset for azure prow job Signed-off-by: Moath Qasim <moad.qassem@gmail.com>
Signed-off-by: Moath Qasim <moad.qassem@gmail.com>

--- a/.prow.yaml
+++ b/.prow.yaml
@@ -230,6 +230,7 @@ presubmits:
       preset-azure: "true"
       preset-hetzner: "true"
       preset-e2e-ssh: "true"
+      preset-rhel: "true"
     spec:
       containers:
         # Uses go1.11.1
