--- a/pkg/userdata/rhel/testdata/kubelet-v1.12-aws-external.yaml
+++ b/pkg/userdata/rhel/testdata/kubelet-v1.12-aws-external.yaml
@@ -71,7 +71,7 @@ write_files:
 
     yum config-manager --add-repo=https://download.docker.com/linux/centos/docker-ce.repo
 
-    mkdir /etc/docker
+    mkdir -p "/etc/docker"
 
     yum install -y docker-ce-3:18.09.1-3.el7 \
       ebtables \
