--- a/pkg/userdata/rhel/testdata/kubelet-v1.12-vsphere.yaml
+++ b/pkg/userdata/rhel/testdata/kubelet-v1.12-vsphere.yaml
@@ -71,12 +71,16 @@ write_files:
     swapoff -a
 
     hostnamectl set-hostname node1
-    subscription-manager register --username='' --password='' --auto-attach --force
+    subscription-manager clean
+    subscription-manager register --username='' --password=''
+    subscription-manager attach --auto
+    yum clean all
+    yum repolist
 
 
     yum config-manager --add-repo=https://download.docker.com/linux/centos/docker-ce.repo
 
-    mkdir /etc/docker
+    mkdir -p "/etc/docker"
 
     yum install -y docker-ce-3:18.09.1-3.el7 \
       ebtables \
