--- a/pkg/userdata/rhel/testdata/kubelet-v1.10-aws.yaml
+++ b/pkg/userdata/rhel/testdata/kubelet-v1.10-aws.yaml
@@ -69,6 +69,12 @@ write_files:
     swapoff -a
 
 
+    subscription-manager clean
+    subscription-manager register --username='' --password=''
+    subscription-manager attach --auto
+    yum clean all
+    yum repolist
+
     yum config-manager --add-repo=https://download.docker.com/linux/centos/docker-ce.repo
 
     mkdir -p "/etc/docker"
